@@ -495,6 +495,14 @@ When set to C<yes>, Cisco temperature sensor values are stored in
 a separate RRD file per sensor ID. This is useful for modular big routers
 like Cisco GSR.
 
+=item * C<CiscoGeneric::disable-psupplies>
+
+if set to C<yes>, Cisco power supply statistics are not collected.
+
+=item * C<CiscoGeneric::power-monitor>
+
+Name of the power supply monitor for Cisco devices.
+
 =item * C<CiscoIOS::disable-membuf-stats>
 
 When set to C<yes>, Cisco memory buffer statistics are excluded from
