@@ -1,3 +1,8 @@
+2006-02-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoGeneric.pm (discover):
+	Cisco power supply monitoring
+
 2006-02-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* bin/action_notify.in: New monitor action
